--- a/Views/Home/DisplayBoxes.cshtml
+++ b/Views/Home/DisplayBoxes.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@section mainPage {
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+}
 @{
     ViewData["Title"] = "DisplayBoxes";
     Layout = "~/Views/Shared/_Layout.cshtml";
