--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,101 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿
+@model iranAttractions.ViewModels.MainViewModel
+<!doctype html>
+<html lang="fa">
+<head>
+    <meta charset="utf-8">
+    <title>Untitled Document</title>
+    <link href="main.css" rel="stylesheet" type="text/css">
+    <link href="gallery.css" rel="stylesheet" type="text/css">
+</head>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<body>
+    <header class="site-header">
+
+        <nav class="navbar">
+
+            <ul>
+                <li><img src="img/33.jpg" alt="Logo" class="logo"></li>
+                <li><a href="contact.html">تماس با ما</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">استان ها</a>
+                    <div class="dropdown-content">
+                        @foreach (var city in Model.Cities)
+                        {
+                            <a class="pic-link" asp-action="DisplayProvince" asp-controller="Province" asp-route-ItemId="@city.Id">
+
+                                <button class="pic-button">@city.Name</button>
+
+                            </a>
+                        }
+                        <!-- سایر استان‌ها را اینجا اضافه کنید -->
+                    </div>
+                </li>
+                <li><a href="gallery.html">گالری</a></li>
+                <li><a asp-action="Index" asp-controller="Home">خانه</a></li>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li>
+                        <a asp-controller="Account" asp-action="Logout">خروج</a>
+                    </li>
+                }
+                else
+                {
+                    <li>
+                        <a asp-controller="Account" asp-action="Login">ورود / ثبت نام</a>
+                    </li>
+
+                }
+            </ul>
+        </nav>
+
+        <div class="header-content">
+            <h1 class="site-title">SAFAّRO&nbsp;</h1>
+            <p class="site-tagline"> "هر مقصد یک داستان ، هر سفر یک خاطره"</p>
+            <form asp-action="SearchResultCity" asp-controller="Home" method="post">
+                <input type="text" class="search-box" name="query" placeholder="جستجو">
+                <input type="submit" value="بزن بریم">
+            </form>
+        </div>
+    </header>
+    <article class="site-content">
+
+        <!-- دیو استان‌ها -->
+        <div class="divprovince">
+            <h2 class="province">لیست استان‌ها</h2>
+            @for (int i = 0; i < 3; i++)
+            {
+                var city = Model.Cities[i];
+
+                <div class="gallery-container1">
+                    <a type="button" class="pic-link" asp-action="DisplayProvince" asp-controller="Province" asp-route-ItemId="@city.Id">
+                        <img class="gallery" src="img/City@(city.Id).jpg" alt="تصویری یافت نشد">
+                        <button class="pic-button">@city.Name</button>
+
+                    </a>
+                    <p class="pic-text">@city.AttractionCount جاذبه</p>
+                </div>
+
+            }
+        </div>
+        <!-- دیو جاذبه‌ها -->
+        <div class="divattraction">
+            <h2 class="province">لیست جاذبه‌ها</h2>
+            @for (int i = 0; i < 3; i++)
+            {
+                var sightseeing = Model.sightseeings[i];
+                <div class="gallery-container2">
+                    <a type="button" class="pic-link" asp-action="DisplayInfoes" asp-controller="Attraction" asp-route-ItemId="@sightseeing.Id">
+                        <img class="gallery" src="img/Sight@(sightseeing.Id).jpg" alt="تصویری یافت نشد">
+                        <button class="pic-button">@sightseeing.City.Name</button>
+
+                    </a>
+                    <p class="pic-text">@sightseeing.Name</p>
+                </div>
+            }
+        </div>
+
+    </article>
+
+</body>
+</html>
