--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,12 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - iranAttractions</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    @RenderSection("mainPage", required: false) 
+    @RenderSection("Styles", required: false)  
 
-    @RenderSection("Styles", required: false) <!-- Page-specific CSS -->
+    <style>
+        .navbar {
+            display: flex;
+            position: fixed;
+            top:0;
+            justify-content: center;
+            background-color: #daa38f;
+            height: 60px; /* ارتفاع مشخص */
+            width: 100%; /* عرض کامل */
+            padding: 10px 20px;
+            align-items: center;
+            z-index: 1000;
+        }
+
+            .navbar ul {
+                list-style-type: none;
+                padding: 0;
+                margin-top: 10px;
+                position: fixed;
+                display: flex;
+            }
+
+            .navbar li {
+                display: block;
+                margin-left: 20px;
+                float: left;
+                padding: 25px;
+            }
+
+            .navbar a {
+                color: #000000;
+                text-decoration: none;
+                transition: 1s;
+            }
+
+        ul li a:hover {
+            font: bold;
+            font-size: 20px;
+            box-shadow: 2px 5px 30px rgba(0,0,0,.1);
+            color: black;
+        }
+
+        .logo {
+            width: 80px;
+            height: 50px;
+            margin-right: 20px;
+            align-self: center;
+        }
 
 
-
+        .header-content {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
+    </style>
 
 
 </head>
@@ -28,10 +82,10 @@
         </nav>
 
         @RenderSection("header", required: false)
-    <
+   
     
         
-            @RenderBody()
+        @RenderBody()
         
     
 
@@ -41,9 +95,12 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/distination.js"></script>
 
-
+    <script src="~/js/distination.js" defer></script>
+    <script src="~/js/comment-slider.js"></script>
+    <script src="~/js/like.js"></script>
+    <script src="~/js/Upload-box.js"></script>
+    <script src="~/js/insert-profile.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
