--- a/wwwroot/css/distination.css
+++ b/wwwroot/css/distination.css
@@ -1,30 +1,45 @@
+﻿* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    direction: rtl;
+    line-height: 1.6;
+}
+
 body, html {
     justify-content: center;
     margin: 0;
     padding: 0;
 }
 
-.slider {
+.main-slider {
     position: relative;
     max-width: 100%;
     overflow: hidden;
     margin: 30px;
     border-radius: 10px;
+    margin-top: 20px;
 }
 
-.slide {
+.main-slide {
     display: none;
     position: relative;
+    margin-top:20px;
 }
 
-    .slide img {
+    .main-slide img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
         vertical-align: middle;
     }
 
-.active {
-    display: block;
-}
+    .main-slide.active {
+        display: block;
+    }
 
 @keyframes fadeIn {
     from {
@@ -48,28 +63,28 @@ body, html {
     }
 }
 
-.slide .caption {
+.main-caption {
     position: absolute;
     bottom: 20%;
     left: 5%;
     color: white;
+    padding: 10px;
+    border-radius: 5%;
     max-width: 500px;
     opacity: 0.5;
     animation-duration: 1s;
     animation-fill-mode: forwards;
-    background-color: rgba(0, 0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     backface-visibility: initial;
-    border-radius: 5%;
-    padding: 10px;
     line-height: 1.5em;
 }
 
-.slide.active .caption {
+.main-slide.active .main-caption {
     opacity: 1;
     animation-name: fadeIn,slideInUp;
 }
 
-.caption {
+.main-caption {
     position: absolute;
     bottom: 20%;
     left: 5%;
@@ -77,12 +92,12 @@ body, html {
     max-width: 500px;
 }
 
-    .caption h1 {
-        font-size: 2.5em;
+    .main-caption h1 {
+        font-size: 2em;
         margin: 0;
     }
 
-    .caption p {
+    .main-caption p {
         font-size: 1em;
     }
 
@@ -109,101 +124,518 @@ body, html {
             background-color: rgba(0, 0, 0, 0.7);
         }
 
-.main {
-    margin-top: 00px;
-}
-
-.comments-section {
-    width: 60%;
-    padding: 20px;
-}
-
-.main_container {
+/* استایل Navbar */
+.navbar2 {
+    background-color: #2c3e50;
+    color: white;
     display: flex;
-    background-color: #ffeee6;
-}
-
-.comment {
-    width: 700px;
-    background-color: white;
-    padding: 15px;
-    border-radius: 8px;
-    margin-bottom: 15px;
-    margin-left: 50px;
-}
-
-.comment-header {
-    display: flex;
+    justify-content: center;
     align-items: center;
+    padding: 10px 20px;
+    position: sticky;
+    top: 60px;
+    z-index: 1000;
+    margin-top: 80px;
+}
+
+    .navbar2 a {
+        text-decoration: none;
+        color: white;
+        margin: 0 15px;
+        font-size: 16px;
+        transition: color 0.3s ease;
+    }
+
+        .navbar2 a:hover {
+            color: #f39c12;
+        }
+/*استایل بخش‌های صفحه */
+section {
+    padding: 50px;
+    margin: 20px 0;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+}
+
+#restaurants {
+    background-color: #f7f9f9;
+}
+
+div.gallery {
+    border: 1px solid #ccc;
+}
+
+    div.gallery:hover {
+        border: 1px solid #777;
+    }
+
+    div.gallery img {
+        width: 100%;
+        height: auto;
+    }
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+.responsive {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+    .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .responsive {
+        width: 100%;
+    }
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+#hotels {
+    background-color: #eef5f9;
+}
+
+#gallery {
+    background: #f9f2f2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 120vh;
+}
+
+    #gallery h2 {
+        font-size: 36px;
+        margin-bottom: 20px;
+        color: #333;
+        margin-bottom: 80px;
+    }
+
+.gallery-container {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 20px;
+    width: 800px;
+    height: 500px;
+    background: #f9f2f2;
+    transition: 0.25s;
+}
+
+    .gallery-container .box {
+        position: relative;
+        background: var(--img);
+        background-position: center;
+        background-size: cover;
+        transition: 0.25s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+        .gallery-container .box.one {
+            --img: url("img/image1.jpg");
+        }
+
+        .gallery-container .box.two {
+            --img: url("img/image2.jpg");
+        }
+
+        .gallery-container .box.three {
+            --img: url("img/image3.jpg");
+        }
+
+        .gallery-container .box.four {
+            --img: url("img/image4.jpg");
+        }
+
+        .gallery-container .box.five {
+            --img: url("img/image5.jpg");
+        }
+
+        .gallery-container .box:hover .like-button {
+            opacity: 1;
+            transform: scale(1.2);
+        }
+
+    .gallery-container .like-button {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        width: 30px;
+        height: 30px;
+        background: url("../img/heart-outline.png") no-repeat center;
+        background-size: contain;
+        cursor: pointer;
+        opacity: 0;
+        transition: all 0.3s ease;
+        background-color: rgba(255, 255, 255, 0.6);
+        border-radius: 20%;
+    }
+
+    .gallery-container .box:hover .like-button {
+        opacity: 1;
+        transform: scale(1.2);
+    }
+
+    .gallery-container .like-button.liked {
+        background: url("../img/heart-filled.png") no-repeat center;
+        background-size: contain;
+        background-color: rgba(255, 0, 0, 0.4);
+        opacity: 1;
+        transform: scale(1.2);
+    }
+
+    .gallery-container:hover .box {
+        filter: grayscale(1);
+    }
+
+    .gallery-container .box:hover {
+        filter: grayscale(0)brightness(1.25);
+    }
+
+    .gallery-container:has(.one:hover) {
+        grid-template-columns: 2fr 0.5fr 0.5fr 0.5fr 0.5fr;
+    }
+
+    .gallery-container:has(.two:hover) {
+        grid-template-columns: 0.5fr 2fr 0.5fr 0.5fr 0.5fr;
+    }
+
+    .gallery-container:has(.three:hover) {
+        grid-template-columns: 0.5fr 0.5fr 2fr 0.5fr 0.5fr;
+    }
+
+    .gallery-container:has(.four:hover) {
+        grid-template-columns: 0.5fr 0.5fr 0.5fr 2fr 0.5fr;
+    }
+
+    .gallery-container:has(.five:hover) {
+        grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr 2fr;
+    }
+
+    .gallery-container .box::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(#000,transparent,transparent,transparent,#000);
+    }
+
+    .gallery-container .box:nth-child(even) {
+        transform: translateY(30px);
+    }
+
+    .gallery-container .box:nth-child(odd) {
+        transform: translateY(-30px);
+    }
+
+    .gallery-container .box::after {
+        content: attr(data-text);
+        position: absolute;
+        bottom: -100px;
+        background: #fff;
+        color: #000;
+        font-weight: 600;
+        padding: 5px 10px;
+        white-space: nowrap;
+        text-transform: uppercase;
+        letter-spacing: 0.5em;
+        opacity: 0;
+        transition: 0.5s;
+        transition-delay: 0;
+    }
+
+    .gallery-container .box:hover:after {
+        opacity: 1;
+        transition-delay: 0.25s;
+        bottom: -60px;
+    }
+
+.upload-section {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    max-width: 400px;
+    margin-top: 100px;
+}
+
+    .upload-section h3 {
+        font-size: 20px;
+        margin-bottom: 10px;
+        color: #333;
+    }
+
+    .upload-section input[type="file"] {
+        margin-bottom: 10px;
+        display: none;
+    }
+
+    .upload-section label {
+        padding: 10px 20px;
+        background-color: #333;
+        color: #fff;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        font-size: 14px;
+    }
+
+        .upload-section label:hover {
+            background-color: #555;
+        }
+
+.image-preview {
+    width: 150px;
+    height: 150px;
+    background-color: #f2f2f2;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    margin-top: 10px;
+    display: none;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
+
+.upload-section button {
+    padding: 10px 20px;
+    background-color: #ff5733;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+    transition: background-color 0.3s;
+    margin-top: 15px;
+}
+
+    .upload-section button:hover {
+        background-color: #e64925;
+    }
+
+#reviews {
+    background-color: #f5f9f6;
+}
+
+.comment-slider {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    margin: 0 auto;
+    max-width: 1200px;
+    direction: rtl;
+}
+
+.slider-comments {
+    display: flex;
+    flex-direction: row;
+    transition: transform 0.5s ease;
+}
+
+.com-slide {
+    min-width: 100%;
+    box-sizing: border-box;
+}
+
+.comments {
+    background-color: #ffdcb1;
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
+    padding: 20px;
+    border-radius: 15px;
+    box-sizing: border-box;
+    background-color: #2c3e50;
+}
+
+.comment-box {
+    background-color: azure;
+    text-align: center;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-width: 30%;
+    flex: 0 1 calc(30% - 20px);
+    height: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 300px;
+}
+
+.comments .comment-box:hover .comment-text {
+    box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.884);
+}
+
+.comment-box .comment-text {
+    margin-bottom: 15px;
+    font-size: 14px;
+    width: 100%;
+    background-color: white;
+    border-radius: 20px 20px 0 20px;
+    padding: 20px;
+    text-align: justify;
+}
+
+.comment-box .comment-image {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
     margin-bottom: 10px;
 }
 
-    .comment-header h3 {
-        background-color: #faad95;
-        font-size: 20px;
-        color: #2e2e2e;
+.comment-box .comment-name {
+    margin-top: 10px;
+    font-weight: bold;
+    color: #ff5733;
+}
+
+#prevBtn, #nextBtn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    padding: 10px 15px;
+    z-index: 10;
+}
+
+#prevBtn {
+    left: 10px;
+    right: auto;
+}
+
+#nextBtn {
+    right: 10px;
+    left: auto;
+}
+
+    #prevBtn:hover, #nextBtn:hover {
+        background-color: rgba(0, 0, 0, 0.8);
     }
 
-    .comment-header span {
-        color: #fc5203;
-        font-size: 12px;
+/* تنظیمات واکنش‌گرا */
+@media (max-width: 768px) {
+    .comments .comment-box {
+        flex: 1 1 calc(50% - 20px); /* دو کارت در هر خط */
     }
+}
 
-.comment p {
-    font-size: 14px;
-    color: black;
+@media (max-width: 480px) {
+    .comments .comment-box {
+        flex: 1 1 100%; /* یک کارت در هر خط */
+    }
+}
+
+section {
+    padding: 50px;
+    background-color: #f5f9f6;
+    text-align: center;
+    box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.884);
+}
+
+#add-comment-section {
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+    text-align: center;
+    max-width: 1250px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .comment-form {
-    width: 30%;
-    padding: 20px;
-    background-color: #2e2e2e;
-    border-radius: 8px;
-    margin-left: 20px;
-    margin-top: 20px;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
     margin-bottom: 20px;
 }
 
-    .comment-form h2 {
-        color: white;
+#comment-input {
+    flex: 1; /* کادر متن کل فضای باقی‌مانده را می‌گیرد */
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-left: 10px;
+    height: 40px;
+    font-size: 16px;
+    box-sizing: border-box;
+}
+
+#submit-btn {
+    height: 40px;
+    padding: 0 20px;
+    background-color: #ff5733;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+    #submit-btn:hover {
+        background-color: #1ca300;
     }
 
-    .comment-form label {
-        font-size: 14px;
-        color: white;
+.profile-selection {
+    margin-top: 20px;
+}
+
+.profile-images {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.profile-option {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    border: 2px solid transparent;
+    transition: border 0.3s ease;
+}
+
+    .profile-option:hover {
+        border: 2px solid #4caf50;
     }
 
-    .comment-form textarea, .comment-form input[type="text"] {
-        width: 95%;
-        padding: 8px;
-        margin-bottom: 10px;
-        margin-left: 20px;
-        border-radius: 4px;
-        border: none;
-        background-color: #ffeee6;
-        color: black;
-    }
+#selected-profile {
+    margin-top: 10px;
+    text-align: center;
+}
 
-    .comment-form p {
-        font-size: 12px;
-        color: white;
-    }
-
-    .comment-form a {
-        color: #289FD2;
-    }
-
-    .comment-form button {
-        width: 100%;
-        padding: 10px;
-        border: none;
-        border-radius: 4px;
-        background-color: #fc5203;
-        color: #f6efdf;
-        font-weight: bold;
-        cursor: pointer;
-    }
-
-        .comment-form button:hover {
-            background-color: #faad95;
-        }
+#selected-profile-image {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    margin-top: 5px;
+}
